# bin2vec

./: .gitignore  README.md  pyproject.toml
config/: categories.yaml  compiler_matrix.yaml  packages.yaml
docker/: Dockerfile  Dockerfile.aarch64  Dockerfile.mipsel  Dockerfile.x86_64  binrepos.conf
src/bin2vec/: __init__.py  __main__.py
src/bin2vec/assemble/: grouping.py  splitting.py  writer.py
src/bin2vec/cli/: assemble.py  build.py  extract.py  preprocess.py  train.py
src/bin2vec/config/: matrix.py  packages.py
src/bin2vec/extract/: elf_parser.py  extractor.py  function_filter.py
src/bin2vec/model/: __init__.py  basic_block_encoder.py  bin2vec.py  cfg_encoder.py
src/bin2vec/preprocess/: __init__.py  cfg.py  interface.py  tokenizer.py
src/bin2vec/train/: __init__.py  dataset.py  loss.py  train.py
src/bin2vec/utils/: logging.py  paths.py
